# Devastar

./: CMakeLists.txt  LICENSE  README.md
DFRobot/: CMakeLists.txt  test.cpp
arduino/lm1881test/: lm1881_menacer_hv_sync_test.ino
arduino/lm1881test/lm1881_atari_hv_sync_test/: lm1881_atari_hv_sync_test.ino
arduino/lm1881test/lm1881_menacer_hv_sync_test/: lm1881_menacer_hv_sync_test.ino
arduino/lm1881test/lm1881_phaser_hv_sync_test/: lm1881_phaser_hv_sync_test.ino
arduino/lm1881test/lm1881_stunner_hv_sync_test/: lm1881_stunner_hv_sync_test.ino
arduino/lm1881test/lm1881_superscope_hv_sync_test/: lm1881_superscope_hv_sync_test.ino
arduino/lm1881test/lm1881test/: lm1881test.ino
arduino/menacer/: menacer.ino
arduino/mouse/: mouse.ino
arduino/mouse_test/mouse_test/: mouse_test.ino
arduino/phaser/: phaser.ino
arduino/stunner/: stunner.ino
arduino/superscope/: superscope.ino
arduino/xg1/: xg1.ino
cad/IR/: IR_EMITTER_TV_MOUNT-Body.stl  IR_EMITTER_TV_MOUNT.FCStd
cad/case/: Devastar_Body-Body001.stl  Devastar_Body-Handle.stl  Devastar_Body_M-Handle (Mirror #1).stl  Devastar_Body_M.FCStd
cad/gun/: Devastar_body.FCStd  filter_plate.stl  front_barrel_bottom.stl  front_barrel_top.stl  handle.stl  rear_barrel_bottom.stl  rear_barrel_top.stl  trigger.stl
calib/calibrate/: CMakeLists.txt  calibrate.cpp
calib/generate_board/: CMakeLists.txt  generate_board.cpp
camera/: CMakeLists.txt  camera.cpp  display3d.cpp
circuits/: README.md
gun_camera/: CMakeLists.txt  aim_calib.cpp  aim_calib.h  aim_calib.yml  camera.cpp  compute.cpp  compute.h  config.cpp  config.h  config_genesis.yml  config_genesis_ir.yml  config_mouse.yml  config_phaser.yml  config_stunner.yml  config_superscope.yml  config_xg1.yml  devastar_common.h  df_robot.cpp  df_robot.h  ir_camera.cpp  ir_camera.h  main.cpp  test.h  test_calib.cpp  test_config.cpp
util/atarixg1/: GUNTEST.LST
util/justifier/src/: main.c
util/menacer/res/: resources.res
util/menacer/src/: main.c
util/phaser/res/: resources.res
util/phaser/src/: main.c
